Closed
Bug 854904
Opened 9 years ago
Closed 9 years ago
UnixSocket: sockaddr_in, sockaddr_in6 not defined in UnixSocket.h
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: vicamo, Assigned: vicamo)
References
Details
Attachments
(3 files, 1 obsolete file)
In file included from ipc/unixsocket/UnixSocket.cpp:7:0: ipc/unixsocket/UnixSocket.h:30:3: error: 'sockaddr_in' does not name a type ipc/unixsocket/UnixSocket.h:31:3: error: 'sockaddr_in6' does not name a type
Assignee | ||
Comment 1•9 years ago
|
||
Assignee | ||
Comment 2•9 years ago
|
||
verifying ...
Assignee | ||
Updated•9 years ago
|
Assignee: nobody → vyang
Assignee | ||
Updated•9 years ago
|
Attachment #729568 -
Attachment description: WIP → patch
Attachment #729568 -
Flags: review?(kyle)
Comment 3•9 years ago
|
||
Comment on attachment 729568 [details] [diff] [review] patch Review of attachment 729568 [details] [diff] [review]: ----------------------------------------------------------------- Sorry about that, had this patch done but guess this only got merged to b2g18.
Attachment #729568 -
Flags: review?(kyle) → review+
Assignee | ||
Comment 4•9 years ago
|
||
Re-gen from hg. Will push when inbound re-open again.
Attachment #729568 -
Attachment is obsolete: true
Attachment #729953 -
Flags: review+
Assignee | ||
Comment 5•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/508256893af7
Assignee | ||
Comment 6•9 years ago
|
||
(In reply to Kyle Machulis [:kmachulis] [:qdot] from comment #3) > Sorry about that, had this patch done but guess this only got merged to b2g18. Never mind. Just a little bit curious, am I the only person affected? I'm on Ubutu 13.04 beta. Probably the reason why I'm the only victim here. Will nominate for leo+/tef+ when this affects others as well.
Comment 7•9 years ago
|
||
It's already tef+'d and landed, as of https://bugzilla.mozilla.org/show_bug.cgi?id=843868#c35 I just didn't get it into m-c. This should fix it for all platforms. And it probably didn't get seen because... actually I'm not really sure why. That should've blown up when building for desktop on 12.04 too I though. We get away with it on gonk because we get in.h from another header somewhere.
Comment 8•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/508256893af7
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in
before you can comment on or make changes to this bug.
Description
•