Bug 854904: fix undefined sockaddr_in, sockaddr_in6. r=qDot